<resources>

    <string name="skip">スキップ</string>
    <string name="remember_account">初めてログインされる方</string>
    <string name="login">ログイン</string>
    <string name="userId">ログインID</string>
    <string name="noti_UserId">ポイントカードに記載の『会員番号（半角数字6桁）』がログインIDです</string>
    <string name="password">パスワード</string>
    <string name="noti_password">『 生年月日8桁（半角数字）』が初期パスワードです。
（例：1980年1月1日生まれ　→「19800101」をご入力ください。）</string>
    <string name="forgot_password">ログインID、パスワードにお困りの方へ</string>
    <string name="password_reissue">パスワード再発行</string>
    <string name="sent_email">パスワード再設定メールの送信が完了しました。</string>
    <string name="noti_check_email">上記のメールアドレス宛にパスワード再設定メールを送信しまし\nたので、ご確認ください。</string>
    <string name="return_login">ログイン画面に戻る</string>
    <string name="des_reset_password">パスワードの再設定のために、ご本人確認を行います。ア カウントに登録したメールアドレスを入力してください。</string>
    <string name="email_address">メールアドレス</string>
    <string name="noti_reset_password">※登録されたメールアドレス宛に、パスワードを再設定するためのURLをお送りします。\n\n※メールに記載されたURLをクリックし、新しいパスワードの設定を行った上で再度ログインをお願いします。\n\n※ドメイン指定受信を設定している方は、「abcdef@abcd.com」が受信できるように設定を変更してください。\n\nメールが受信出来ない場合があります。</string>
    <string name="send_email">送信する</string>
    <string name="set_new_pass">新しいパスワードを設定してください。</string>
    <string name="enter_new_pass">新しいパスワードを入力してください</string>
    <string name="confirm_new_pass">新しいパスワード（確認用）を入力してください</string>
    <string name="password_registration">パスワード登録</string>
    <string name="reload_app">パスワード再設定が完了しました。\nアプリを起動してログイン画面から\nログインしてください。</string>
    <string name="invalid_account_message">ログインIDまたはパスワードが一致しません。</string>
    <string name="invalid_password_message">ログインIDまたはパスワードが一致しません。</string>
    <string name="invalid_email_message">メールアドレスを正しく入力してください。</string>
    <string name="msg_error_login_request">ただいまシステムエラーによりログインいただけません。しばらく経ってから再度お試しください。</string>
    <string name="msg_error_forgotpass_request">ただいまシステムエラーによりご利用いただけません。しばらく経ってから再度お試しください。</string>
    <string name="msg_password_not_match">ご入力されたパスワードが一致しません。再度ご入力ください</string>
    <string name="msg_valid_reset_password">パスワードは8文字以上、数字と英字で設定してください。</string>
    <string name="msg_erorr_request_add_email">ただいまシステムエラーによりご利用いただけません。しばらく経ってから再度お試しください。</string>
    <string name="ok">OK</string>
    <string name="point_held">保有ポイント</string>
    <string name="pt">pt</string>
    <string name="qr_action_home">会員証コード</string>
    <string name="phone_call_title">お急ぎの方はお電話にてご連絡ください</string>
    <string name="phone_call_desc">365日24時間対応</string>
    <string name="phone_call_btn">電話でのお問い合わせはこちら</string>
    <string name="title_item_new">新着情報</string>
    <string name="connectErrorMsg">ネットワークが不安定です。確認してからもう一度お試しください。</string>
    <string name="serverErrorMsg">サーバー エラーが発生しました。しばらくしてからもう一度お試しください。</string>
    <string name="cancelMsg">キャンセル</string>
    <string name="label_current_point_title">ポイント獲得のお知らせ</string>
    <string name="label_member_card_code">会員証コード</string>
    <string name="lbl_point_card">ポイントカード</string>
    <string name="qr_label_detail">こちらのQRコードを\n従業員にお見せください</string>
    <string name="lbl_point_earn">獲得ポイント数</string>
    <string name="lbl_close">閉じる</string>
    <string name="membership_status">加入状況</string>
    <string name="points_held">保有ポイント</string>
    <string name="contract_details">契約内容</string>
    <string name="contract_plan">契約プラン</string>
    <string name="peace_of_mind_A">安心A</string>
    <string name="txt_current_number">現在の月掛金のお支払い回数　%d回</string>
    <string name="txt_date_completion">完納予定年月　%s</string>
    <string name="view_more_history_of_service">役務サービス利用のご利用履歴</string>
    <string name="see_more">もっと見る</string>
    <string name="price">￥%s</string>
    <string name="subscription_status">マイページ／加入状況</string>
    <string name="message_from_flora">フローラからのメッセージ</string>
    <string name="event_info">イベント情報</string>
    <string name="product_info">商品情報</string>
    <string name="notice">お知らせ</string>
    <string name="what_news">新着情報</string>
    <string name="title_setting">アプリ設定</string>
    <string name="notify_setting_title">通知設定</string>
    <string name="company_profile">会社概要</string>
    <string name="privacy_title">プライバシーポリシー</string>
    <string name="license_title">ライセンス</string>
    <string name="logout_title">ログアウト</string>
    <string name="withdraw_title">退会する</string>
    <string name="areSureCancelQues">本当に退会しますか？</string>
    <string name="withdrawMessageTitle">退会するとご契約情報が\n全て削除されます。</string>
    <string name="yesTitle">はい</string>
    <string name="noTitle">いいえ</string>
    <string name="withdrawSuccessTitle">退会が完了しました。</string>
    <string name="withdrawSuccessMsgTitle">「フローラ互助会アプリ」を\nご利用いただきまして\nありがとうございました。\nまたのご利用をお待ちしております。</string>
    <string name="returnHomeTitle">ホームに戻る</string>
    <string name="logoutSuccessTitle">ログアウトが完了しました。</string>
    <string name="logoutSuccessMsgTitle">「フローラ互助会アプリ」を\nご利用いただきまして\nありがとうございました。\nまたのご利用をお待ちしております。</string>
    <string name="sureLogoutTitleQuest">本当にログアウトしますか？</string>
    <string name="logoutMsgAlert">ログアウト後はログイン画面より\n再度ログインしてください。</string>
    <string name="wedding_style">結婚式</string>
    <string name="facility_information">施設案内</string>
    <string name="view_the_details">詳細を見る</string>
    <string name="telephone_inquiries">電話お問い合わせ</string>
    <string name="funeral">葬儀</string>
    <string name="wedding">結婚式</string>
    <string name="mutual_aid_association">互助会</string>
    <string name="call_request_title">以下の連絡先に電話を発信します。\nよろしいですか？</string>
    <string name="call_request_msg">「発信」をタップすると、端末の 電話アプリが起動します。\n%1$s</string>
    <string name="outgoing">発信</string>
    <string name="funerals">お葬式</string>
    <string name="fukushima_prefecture">福島県</string>
    <string name="inquiry_title">お問い合わせ</string>
    <string name="fill_and_enter">以下のフォームに必要事項をご記入の上、送信ボタンを押してください</string>
    <string name="note_fill">※がついている項目は、必須入力です</string>
    <string name="content_inquiry">お問い合わせ内容※</string>
    <string name="contact_info">お問い合わせ先※</string>
    <string name="hint_name">お名前※</string>
    <string name="hint_name_2">お名前（フリガナ）※</string>
    <string name="hint_phone">電話番号※</string>
    <string name="hint_email">メールアドレス※</string>
    <string name="hint_post_code">郵便番号</string>
    <string name="prefectures">都道府県</string>
    <string name="hint_municipalities">市区町村</string>
    <string name="hint_street">番地・マンションなど</string>
    <string name="counter_inquiry">%1$d/%2$d</string>
    <string name="agree_policy_checkbox"><u>プライバシーポリシーに同意しました</u></string>
    <string name="action_send">送信</string>
    <string name="hint_inquiry">お問い合わせ・ご意見※</string>
    <string name="action_ok">確認する</string>
    <string name="send_request_title">お問い合わせが送信されました。</string>
    <string name="send_request_msg">お問い合わせありがとうございます。\n順次返信いたしますので\n今しばらくお待ちくださいませ。</string>
    <string name="back_to_home">ホームに戻る</string>
    <string name="newsletter">会報誌</string>
    <string name="information_magazine">互助会会員様向け情報誌「えがお」</string>
    <string name="open_detail">会報誌を開く</string>
    <string name="close">閉じる</string>
    <string name="all">全体</string>
    <string name="_private">個別</string>
    <string name="title_home_noti">未読のお知らせが%d件あります</string>
    <string name="qr_point_pro_title">フローラをご利用いただきありがとうございます。\n獲得されたポイントについてお知らせいたします。</string>
    <string name="acquired_points_tlt">獲得ポイント</string>
    <string name="acquisition_date_title">獲得日時</string>
    <string name="stores_facilities_used_title">ご利用店舗・施設</string>
    <string name="usage_point_title">ご利用ポイント</string>
    <string name="tutorial_title_1">アプリのご利用\nありがとうございます</string>
    <string name="tutorial_detail_1">これより簡単なアプリの機能をご説明いたします。</string>
    <string name="tutorial_title_2">加入状況でログインすると\nご契約中の互助会を\n一覧でご確認いただけます</string>
    <string name="tutorial_detail_2">メニューの加入状況からログインが必要とな ります。</string>
    <string name="tutorial_title_3">加入状況でログインすると\nご契約中の互助会を\n一覧でご確認いただけます</string>
    <string name="tutorial_detail_3">ログインすると加入状況や掛込金額を確認いただけます。</string>
    <string name="tutorial_title_4">お得な情報の配信や\n会員様限定のサービスにアクセ\nス</string>
    <string name="tutorial_detail_4">お得な情報をスマートフォンの通知でおしらせします。\n\nまた、本アプリから会員様限定のサービスをすぐにご利用いただけます。</string>
    <string name="tutorial_title_5">始めましょう！</string>
    <string name="tutorial_detail_5">機能の説明は以上です。\n\nアプリ・サービスへの不明点やご質問がありましたら本アプリの「お問い合わせ」よりご連絡ください。</string>
    <string name="error_deffault_title">エラーが発生しました</string>

    <!-- Menu title -->
    <string name="title_home">ホーム</string>
    <string name="title_qr">会員証コード</string>
    <string name="title_person">マイページ／加入状況</string>
    <string name="title_news">新着情報</string>
    <string name="title_wedding">結婚式 施設案内</string>
    <string name="title_funeral">お葬式 施設案内</string>
    <string name="title_flower">供花弔文</string>
    <string name="title_cart">お買い物</string>
    <string name="title_newsletter">会報誌「えがお」</string>
    <string name="title_contact">お問い合わせ</string>
    <string name="title_member">加入状況</string>
    <string name="title_Setting">設定</string>

    <!-- Menu home title-->
    <string name="homeTitle_news">新着情報</string>
    <string name="homeTitle_wedding">結婚式</string>
    <string name="homeTitle_funeral">お葬式</string>
    <string name="homeTitle_flower">供花弔文</string>
    <string name="homeTitle_cart">お買い物"</string>
    <string name="homeTitle_newsletter">会報誌</string>
    <string name="homeTitle_setting">設定</string>
    <string name="homeTitle_member">加入状況</string>
    <string name="validate_name">お名前は必要項目です。</string>
    <string name="validate_name_2">お名前（フリガナ）は必要項目です。</string>
    <string name="validate_name_2_format">お名前（フリガナ）はカタカナで入力してください。</string>
    <string name="validate_phone">電話番号は必要項目です。</string>
    <string name="validate_phone_format">電話番号は正しく形式で入力してください。</string>
    <string name="validate_email">メールアドレスは必要項目です。</string>
    <string name="validate_email_format">メールアドレスは正しく形式で入力してください。</string>
    <string name="validate_post_code">郵便番号は必要項目です。</string>
    <string name="validate_post_code_format">郵便番号は正しく形式で入力してください。</string>
    <string name="validate_inquiry">お問い合わせ・ご意見は必要項目です。</string>
    <string name="validate_inquiry_format">お問い合わせ・ご意見は</string>
    <string name="url_not_found">URLが無効です</string>
    <!--string add email address-->
    <string name="add_emailAddress">メールアドレス登録</string>
    <string name="des_add_emailAdress">アプリをご利用いただくにはメールアドレスの登録が必要です。メールアドレスはパスワードの再設定時に利用します。</string>
    <string name="des_validate_email">※ドメイン指定受信を設定している方は、\n「app@flora-g.co.jp」が受信できるように設定を変更してください。\nメールが受信出来ない場合があります。</string>
    <string name="register_new_email_address">登録する</string>

</resources>