<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".view.authen.fragment.ForgotPasswordFragment">

    <com.cmd.flora.utils.widget.header.BackHeaderView
        android:id="@+id/back_reset_pass_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.cmd.flora.utils.widget.ScreenNameTitle
        android:id="@+id/baseTextview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:text="@string/password_reissue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_reset_pass_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/bg_form_login"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseTextview4">

        <com.cmd.flora.base.BaseTextview
            android:id="@+id/baseTextview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/des_reset_password"
            android:textColor="@color/text_login_color"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTextview4" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/text_login"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_rounder_edt_login"
            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
            android:hint="@string/email_address"
            android:textSize="16dp"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/text_login_color"
            android:paddingLeft="12dp"
            android:textColorHint="@color/text_login_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTextview6"
            tools:ignore="MissingConstraints" />

        <com.cmd.flora.base.BaseTextview
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/error_message"
            android:textSize="13dp"
            android:visibility="gone" />


        <com.cmd.flora.base.BaseTextview
            android:id="@+id/baseTextview8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/noti_reset_password"
            android:textColor="#FD0000"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            tools:layout_editor_absoluteX="33dp" />

        <com.cmd.flora.base.BaseTextview
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_disable_btn_login"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/send_email"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTextview8"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>